kubernetes/apps/base/pterodactyl/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pterodactyl-panel
  namespace: pterodactyl
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pterodactyl-fqdn`)
      kind: Rule
      services:
        - name: pterodactyl-pterodactyl-panel
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: pterodactyl-tls
